<resources>
    <string name="c_app_name">Calculator++</string>
	<string name="c_app_icon_name">Calc++</string>
    <string name="c_app_settings">Settings</string>
    <string name="c_syntax_error">Error</string>
    <string name="c_result_copied">Result copied to clipboard!</string>
	<string name="c_settings">Settings</string>
	<string name="c_help">Help</string>
	<string name="c_about">About</string>
	<string name="c_vars_and_constants">Variables And Constants</string>
	<string name="c_prefs_main_category">Main settings</string>
	<string name="c_prefs_calculations_category">Calculation settings</string>
	<string name="c_prefs_appearance_category">Appearance settings</string>
	<string name="c_prefs_drag_button_category">Drag buttons settings</string>
	<string name="c_prefs_drag_button_calibration">Drag button calibration</string>
	<string name="c_prefs_drag_button_calibration_summary">Allows to calibrate drag button behaviour</string>
	<string name="c_down">Down</string>
	<string name="c_up">Up</string>
	<string name="c_restart">Restart</string>
	<string name="c_about_content">Copyright (c) 2009-2011\n\n<b>Created by serso aka se.solovyev</b>\n\n
		This program is open source:\nall source code can be found on\n<a href="https://github.com/serso/android_calculator">http://github.com</a>\n\n
		For more information please\ncontact the author by email\n<a href="mailto:se.solovyev@gmail.com">se.solovyev@gmail.com</a>
		\nor visit\n<a href="http://se.solovyev.org">http://se.solovyev.org</a>\n\n
		If you want to support the project\nyou can donate money via\n<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=se%2esolovyev%40gmail%2ecom&amp;lc=RU&amp;item_name=Android%20Calculator&amp;currency_code=USD&amp;bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted">http://paypal.com</a>\n\n
		If you like the application\nrank it with 5 stars in\n<a href="https://market.android.com/details?id=org.solovyev.android.calculator">android.market</a>\n\n
		Thanks to people who translate Calculator++ in different languages:\n
		Italian - Gabriele Ravanetti\n
		Spanish - Jordi Luna\n\n
		This application uses next open source libraries:\n
		<a href="http://simple.sourceforge.net">Simple (XML serialization)</a>\n
		<a href="http://meditorworld.appspot.com/meditor.txt">JSCL</a>\n
		<a href="http://www.achartengine.org/">AChartEngine</a>
	</string>
	<string name="c_undo">undo</string>
	<string name="c_redo">redo</string>
	<string name="c_clear">C</string>
	<string name="c_erase">clear</string>
	<string name="c_paste">paste</string>
	<string name="c_vars">vars</string>
	<string name="c_copy">Copy</string>
	<string name="c_plot">Plot graph</string>
	<string name="c_graph">Graph</string>
	<string name="c_calc_color_display_title">Highlight expressions</string>
	<string name="c_calc_round_result_title">Round result</string>
	<string name="c_calc_round_result_summary">Toggles rounding of the result</string>
	<string name="p_calc_result_precision_title">Precision of result</string>
	<string name="c_exit">Exit</string>
	<string name="c_add">Add</string>
	<string name="c_cancel">Cancel</string>
	<string name="c_save">Save</string>
	<string name="c_remove">Remove</string>
	<string name="c_yes">Yes</string>
	<string name="c_no">No</string>
	<string name="c_var_removal_confirmation">Removal confirmation</string>
	<string name="c_var_removal_confirmation_question">Do you really want to delete \'%s\' variable?</string>
	<string name="c_var_name">Name</string>
	<string name="c_var_value">Value</string>
	<string name="c_var_description">Description</string>
	<string name="c_var_create_var">Create variable</string>
	<string name="c_var_edit_var">Edit variable</string>
	<string name="c_value.is.not.a.number">Value must be either number or empty!</string>
	<string name="c_var.name.clashes">Variable name clashes with function name!</string>
	<string name="c_var.already.exists">Variable with same name already exists!</string>
	<string name="c_name.is.not.valid">Name of constant is not valid: name must start with letter, can contain letters, digits and underscore.</string>
	<string name="c_sys.var.cannot.be.changed">System variable cannot be changed!</string>
	<string name="c_var_description_pi">Ratio of any circle\'s circumference to its diameter. Note: this constant is degree unit dependent => rad: 3.14, deg: 180.0</string>
	<string name="c_var_description_PI">Ratio of any circle\'s circumference to its diameter. Note: this constant is degree unit independent => rad: 3.14, deg: 3.14</string>
	<string name="c_var_description_e">Unique real number such that the value of the derivative (slope of the tangent line) of the function f(x) = e^x at the point x = 0 is equal to 1</string>
	<string name="c_var_description_i">Imaginary unit, defined such that i^2 = −1</string>
	<string name="c_var_description_c">Speed of light in vacuum, m·s^-1</string>
	<string name="c_var_description_G">The gravitational constant is an empirical physical constant involved in the calculation of the gravitational attraction between objects with mass, m^3·kg^−1·s^−2</string>
	<string name="c_var_description_h">Physical constant reflecting the sizes of energy quanta in quantum mechanics, J·s</string>
	<string name="c_var_description_h_reduced">Reduced Planck constant, J·s</string>
	<string name="c_var_description_nan">Not a number</string>
	<string name="c_var_description_inf">Infinity</string>
	<string name="c_calc_editor_hint">Enter new expression</string>
	<string name="c_press_to_copy">Press to copy</string>
	<string name="c_continue">Continue</string>
	<string name="c_donate">Donate</string>
	<string name="c_donate_text">You can thank the author of this program by email\n\n
		<a href="mailto:se.solovyev@gmail.com">se.solovyev@gmail.com</a>\n\n
		donating money via\n\n<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=se%2esolovyev%40gmail%2ecom&amp;lc=RU&amp;item_name=Android%20Calculator&amp;currency_code=USD&amp;bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted">http://paypal.com</a>\n\n
		or setting 5 stars in\n\n<a href="https://market.android.com/details?id=org.solovyev.android.calculator">android.market</a>
	</string>
	<string name="c_history">History</string>
	<string name="c_history_button">M</string>
	<string name="c_history_is_empty">History is empty!</string>
	<string name="c_app_history">History</string>
	<string name="c_char_is_not_accepted">Character \'%s\' is not accepted in variable name!</string>
	<string name="c_calc_angle_units">Angle Units</string>
	<string name="p_deg">Degrees</string>
	<string name="p_rad">Radians</string>
	<string name="p_grad">Gradians</string>
	<string name="p_turns">Turns</string>
	<string name="c_angle_units_summary">Defines the default units for angles.</string>
	<string name="c_calc_numeral_bases">Numeral systems</string>
	<string name="c_numeral_bases_summary">Defines the default numeral system for all input numbers.</string>
	<string name="p_dec">Decimal</string>
	<string name="p_hex">Hexadecimal</string>
	<string name="p_oct">Octal</string>
	<string name="p_bin">Binary</string>
	<string name="c_calc_theme">Theme</string>
	<string name="p_default_theme">Default</string>
	<string name="p_violet_theme">Violet</string>
	<string name="p_light_blue_theme">Light Blue</string>
	<string name="c_calc_result_precision_summary">Precision of result value (all calculations are done with maximum precision regardless of the value of this option)</string>
	<string name="c_calc_color_display_summary">Toggles colouring and styling in calculator editor</string>
	<string name="c_calc_theme_summary">Sets the theme for calculator</string>
	<string name="c_clear_history">Clear history</string>
	<string name="c_simplify_instead_of_numeric">Next constants are undefined: {0}!</string>
	<string name="p_grouping_separator_no">No grouping separator</string>
	<string name="p_grouping_separator_apostrophe">Apostrophe (\')</string>
	<string name="p_grouping_separator_space">Space ( )</string>
	<string name="c_calc_grouping_separator">Grouping separator</string>
	<string name="c_calc_grouping_separator_summary">Sets grouping separator</string>
	<string name="c_calc_multiplication_sign">Multiplication sign</string>
	<string name="c_calc_multiplication_sign_summary">Sets multiplication sign</string>
	<string name="c_calc_layout">Layout</string>
	<string name="p_layout_cellphone">Cellphone</string>
	<string name="p_layout_calculator">Calculator</string>
	<string name="c_calc_layout_summary">Sets layout of buttons</string>
	<string name="c_calc_haptic_feedback_title">Haptic feedback</string>
	<string name="c_calc_haptic_feedback_summary">Toggles vibration on button click</string>
	<string name="p_calc_haptic_feedback_strength_short">Short</string>
	<string name="p_calc_haptic_feedback_strength_middle">Middle</string>
	<string name="p_calc_haptic_feedback_strength_long">Long</string>
	<string name="p_calc_haptic_feedback_duration_title">Haptic feedback duration</string>
	<string name="p_calc_haptic_feedback_duration_summary">Duration vibration on button click</string>
	<string name="c_functions">Functions</string>
	<string name="c_fun_description_sin">Trigonometric sine function.</string>
	<string name="c_fun_description_cos">Trigonometric cosine function.</string>
	<string name="c_fun_description_tan">Trigonometric tangent function.</string>
	<string name="c_fun_description_cot">Trigonometric cotangent function.</string>
	<string name="c_fun_description_asin">Arcsine - the inverse of sine function.</string>
	<string name="c_fun_description_acos">Arccosine - the inverse of cosine function.</string>
	<string name="c_fun_description_atan">Arctangent - the inverse of tangent function.</string>
	<string name="c_fun_description_acot">Arccotangent - the inverse of cotangent function.</string>
	<string name="c_fun_description_ln">Natural logarithm - logarithm the base e.</string>
	<string name="c_fun_description_lg">Decadic logarithm - logarithm the base 10.</string>
	<string name="c_fun_description_exp">Exponential function.</string>
	<string name="c_fun_description_sqrt">Square root function.</string>
	<string name="c_fun_description_cubic">Cubic root function.</string>
	<string name="c_fun_description_abs">Function that gives absolute value of an argument.</string>
	<string name="c_fun_description_sgn">Function that gives the sign of an argument: -1 if argument is less than 0, 0 if equals to 0, 1 if more than 0.</string>
	<string name="c_fun_description_eq">Equals function - gives 1 if two arguments are equals, 0 otherwise.</string>
	<string name="c_fun_description_le">Lesser-or-equals function - gives 1 if two arguments are equals or first is less than second, 0 otherwise.</string>
	<string name="c_fun_description_ge">Greater-or-equals function - gives 1 if two arguments are equals or first is greater than second, 0 otherwise.</string>
	<string name="c_fun_description_ne">Not-equals function - gives 1 if two arguments are not equals, 0 otherwise.</string>
	<string name="c_fun_description_lt">Lesser function - gives 1 if first argument is less than second, 0 otherwise.</string>
	<string name="c_fun_description_gt">Greater function - gives 1 if first argument is greater than second, 0 otherwise.</string>
	<string name="c_fun_description_rad">Converts degrees into radians: d - degrees, m - minutes (default = 0), s - seconds (default = 0).</string>
	<string name="c_fun_description_dms">Converts degrees from DMS notation to decimal notation: d - degrees, m - minutes (default = 0), s - seconds (default = 0).</string>
	<string name="c_fun_description_deg">Converts radians into degrees.</string>
	<string name="c_empty_var_error">Unable to create empty constant!</string>
	<string name="c_not_valid_result">Current result is not valid!</string>
	<string name="c_operators">Operators</string>
</resources>