<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:a="http://schemas.android.com/apk/res/android"
			  xmlns:calc="http://schemas.android.com/apk/res/org.solovyev.android.calculator"

			  a:orientation="vertical"
			  a:padding="6dp"
			  a:layout_width="fill_parent"
			  a:layout_height="fill_parent">

	<LinearLayout 	a:orientation="horizontal"
					a:layout_width="fill_parent"
					a:layout_height="wrap_content">

		<ImageView a:id="@+id/calibrationArrow"
				   a:layout_gravity="left"
				   a:layout_width="80dp"
				   a:layout_height="80dp"/>

		<org.solovyev.android.view.DirectionDragButton a:id="@+id/calibrationButton"
											  a:text=""
											  calc:textUp="@string/c_up"
											  calc:textDown="@string/c_down"
											  style="@style/digitButtonStyle"
											  a:layout_width="80dp"
											  a:layout_height="80dp"
											  a:layout_gravity="center_horizontal"/>
	</LinearLayout>

	<Button a:id="@+id/calibrationStart"
			a:text="@string/c_restart"
			a:layout_width="wrap_content"
			a:layout_height="wrap_content"
			a:onClick="restartClickHandler"
			a:layout_gravity="bottom"/>
</LinearLayout>
