<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 serso aka se.solovyev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Contact details
  ~
  ~ Email: se.solovyev@gmail.com
  ~ Site:  http://se.solovyev.org
  -->
<org.solovyev.android.calculator.drag.DirectionDragButton xmlns:a="http://schemas.android.com/apk/res/android"
													xmlns:c="http://schemas.android.com/apk/res-auto"
													a:id="@id/cpp_button_history"
													a:text="@string/c_history_button"
													c:textUp="@string/c_undo"
													c:textDown="@string/c_redo"
													c:directionTextScale="0.27"
													style="?cpp_control_button_style"
													a:textStyle="bold"
													a:onClick="historyButtonClickHandler"/>