<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 serso aka se.solovyev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Contact details
  ~
  ~ Email: se.solovyev@gmail.com
  ~ Site:  http://se.solovyev.org
  -->

<ScrollView xmlns:a="http://schemas.android.com/apk/res/android"
    a:layout_width="match_parent"
    a:layout_height="wrap_content"
    a:minWidth="300dp">

    <LinearLayout
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:orientation="vertical">

        <TextView
            style="@style/cpp_default_text_size"
            a:layout_width="match_parent"
            a:layout_height="wrap_content"
            a:padding="6dp"
            a:text="@string/c_var_name" />

        <EditText
            a:id="@+id/var_edit_name"
            style="@style/cpp_default_text_size"
            a:layout_width="match_parent"
            a:layout_height="wrap_content"
            a:inputType="text" />

        <TextView
            a:id="@+id/var_toggle_greek_keyboard"
            style="@style/cpp_default_text_size"
            a:layout_width="match_parent"
            a:layout_height="wrap_content"
            a:padding="6dp"
            a:text="@string/cpp_var_show_greek_keyboard" />

        <LinearLayout
            a:id="@+id/var_greek_keyboard"
            a:layout_width="match_parent"
            a:layout_height="wrap_content"
            a:orientation="vertical"
            a:visibility="gone" />

        <TextView
            style="@style/cpp_default_text_size"
            a:layout_width="match_parent"
            a:layout_height="wrap_content"
            a:padding="6dp"
            a:text="@string/c_var_value" />

        <EditText
            a:id="@+id/var_edit_value"
            style="@style/cpp_default_text_size"
            a:layout_width="match_parent"
            a:layout_height="wrap_content"
            a:inputType="numberDecimal" />

        <TextView
            style="@style/cpp_default_text_size"
            a:layout_width="match_parent"
            a:layout_height="wrap_content"
            a:padding="6dp"
            a:text="@string/c_var_description" />

        <EditText
            a:id="@+id/var_edit_description"
            style="@style/cpp_default_text_size"
            a:layout_width="match_parent"
            a:layout_height="wrap_content"
            a:inputType="text" />

        <LinearLayout
            a:layout_width="match_parent"
            a:layout_height="wrap_content">

            <Button
                a:id="@+id/cancel_button"
                a:layout_width="0dp"
                a:layout_height="wrap_content"
                a:layout_weight="1"
                a:text="@string/c_cancel" />

            <Button
                a:id="@+id/remove_button"
                a:layout_width="0dp"
                a:layout_height="wrap_content"
                a:layout_weight="1"
                a:text="@string/c_remove" />

            <Button
                a:id="@+id/save_button"
                a:layout_width="0dp"
                a:layout_height="wrap_content"
                a:layout_weight="1"
                a:text="@string/c_save" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>

